fix(admin): fix 4 critical audit bugs - XSS, hardcoded driver data, broken filter, emoji violations

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -387,13 +387,13 @@
                     <div class="header-actions">
                         <select id="staffRoleFilter" onchange="loadStaff()">
                             <option value="all">All Roles</option>
-                            <option value="operations">🎯 Operations</option>
-                            <option value="finance">💰 Finance</option>
-                            <option value="customer_service">🎧 Customer Service</option>
-                            <option value="quality_control">✅ Quality Control</option>
-                            <option value="logistics">🚚 Logistics</option>
-                            <option value="hr">👥 HR</option>
-                            <option value="management">📊 Management</option>
+                            <option value="operations">Operations</option>
+                            <option value="finance">Finance</option>
+                            <option value="customer_service">Customer Service</option>
+                            <option value="quality_control">Quality Control</option>
+                            <option value="logistics">Logistics</option>
+                            <option value="hr">HR</option>
+                            <option value="management">Management</option>
                         </select>
                         <input type="text" id="staffSearch" placeholder="Search staff..."
                             onkeyup="debounceStaffSearch()">
@@ -416,9 +416,9 @@
                     <div class="header-actions">
                         <select id="driverStatusFilter" onchange="loadDrivers()">
                             <option value="all">All Status</option>
-                            <option value="available">🟢 Available</option>
-                            <option value="busy">🟡 Busy</option>
-                            <option value="offline">⚫ Offline</option>
+                            <option value="available">Available</option>
+                            <option value="busy">Busy</option>
+                            <option value="offline">Offline</option>
                         </select>
                         <input type="text" id="driverSearch" placeholder="Search drivers..."
                             onkeyup="debounceDriverSearch()">
